# BackendServiceKit

./: .actrc  .env.act  .gitignore  .pre-commit-config.yaml  .secrets.local.example  CLAUDE.md  Dockerfile.service  Implementation-order.md  MASTERtodos.md  MasterTODO.md  PHASE2.md  README.md  SKILL.md  TODO.md  Taskfile.yml  docker-compose.yml  simplified-iam-abac-multitenant-saas.md
services/APIGateway/: .env.example  Dockerfile  TODO.md  pyproject.toml
services/APIGateway/app/: main.py
services/APIGateway/app/api/: router.py
services/APIGateway/app/core/: config.py  constants.py  logging.py  openapi.py
services/APIGateway/app/domain/: enums.py  events.py  exceptions.py
services/APIGateway/app/schemas/: base.py  gateway.py
services/APIGateway/app/services/: cache_service.py  kong_admin_service.py  proxy_service.py  route_service.py
services/APIGateway/app/tasks/: audit_tasks.py  cache_tasks.py  notification_tasks.py  worker.py
services/APIGateway/kong/: kong.yml
services/APIGateway/tests/: conftest.py
services/APIGateway/tests/integration/: test_proxy_router.py
services/APIGateway/tests/unit/: test_cache_service.py  test_gateway_router.py  test_health.py  test_kong_admin_service.py  test_route_service.py
services/IAM/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
services/IAM/app/: main.py
services/IAM/app/core/: config.py
services/IAM/app/models/: user_projection.py
services/IAM/app/schemas/: user_projection.py
services/IAM/scripts/: bootstrap.sh  fix.sh  lint.sh  release.sh  test_db_connection.py
services/TenantLifecycle/: .env.example  Dockerfile  README.md  TODO.md  pyproject.toml
services/TenantLifecycle/alembic/: env.py
services/TenantLifecycle/alembic/versions/: c3c86a584056_initial_tables.py
services/TenantLifecycle/app/: main.py
services/TenantLifecycle/app/api/: router.py
services/TenantLifecycle/app/core/: config.py  constants.py  logging.py  openapi.py
services/TenantLifecycle/app/domain/: enums.py  events.py  exceptions.py
services/TenantLifecycle/app/models/: __init__.py  tenant_lifecycle_event.py  tenant_lifecycle_state.py
services/TenantLifecycle/app/repositories/: __init__.py  base.py  lifecycle_event.py  lifecycle_state.py
services/TenantLifecycle/app/schemas/: __init__.py  base.py  lifecycle.py
services/TenantLifecycle/app/services/: __init__.py  lifecycle_service.py
services/TenantLifecycle/scripts/: bootstrap.sh  fix.sh  lint.sh
services/TenantLifecycle/tests/: conftest.py
services/TenantLifecycle/tests/unit/: test_health.py
services/TenantManagement/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.docs  ImplemetationSteps.md  README.md  TODO.md  TenentLifecycle.md  TenentStates.md  entrypoint.sh  mkdocs.yml  pyproject.toml
services/TenantManagement/alembic/: env.py
services/TenantManagement/alembic/versions/: 35cabc56b647_initial_schema.py  5f70f9cce1a5_add_pending_status.py  8a3f1c72b094_remove_pending_status.py  c3c86a584056_activate_endpoint.py  f9a2e1b3c047_restore_pending_status.py
services/TenantManagement/app/: main.py
services/TenantManagement/app/api/: router.py
services/TenantManagement/app/core/: config.py  constants.py  logging.py  middleware.py  openapi.py
services/TenantManagement/app/domain/: commands.py  enums.py  events.py  exceptions.py
services/TenantManagement/app/models/: __init__.py  tenant.py  tenant_contact.py  tenant_metadata.py  tenant_settings.py
services/TenantManagement/app/repositories/: __init__.py  base.py  tenant.py  tenant_contact.py  tenant_metadata.py  tenant_settings.py
services/TenantManagement/app/schemas/: __init__.py  base.py  common.py  tenant.py
services/TenantManagement/app/services/: __init__.py  tenant_metadata_service.py  tenant_owner_service.py  tenant_service.py  tenant_settings_service.py
services/TenantManagement/docs/internal/: api-reference.md  index.md
services/TenantManagement/docs/public/: getting-started.md  index.md  state-machine.md
services/TenantManagement/postman/: TenantManagement.postman_collection.json
services/TenantManagement/scripts/: bootstrap.sh  doc-gen.py  lint.sh  release.sh  seed.py
services/TenantManagement/tests/: conftest.py
services/TenantManagement/tests/unit/: test_health.py
services/TenantProvisioning/: .dockerignore  .env.example  Dockerfile  README.md  TODO.md  pyproject.toml
services/TenantProvisioning/alembic/: env.py
services/TenantProvisioning/alembic/versions/: a1b2c3d4e5f6_initial_schema.py
services/TenantProvisioning/app/: main.py
services/TenantProvisioning/app/api/: router.py
services/TenantProvisioning/app/core/: config.py  constants.py  logging.py  metrics.py  openapi.py  tracing.py
services/TenantProvisioning/app/dependencies/: __init__.py  provisioning.py
services/TenantProvisioning/app/domain/: enums.py  events.py  exceptions.py
services/TenantProvisioning/app/events/: provisioning_events.py
services/TenantProvisioning/app/middleware/: rate_limit.py
services/TenantProvisioning/app/models/: __init__.py  provisioning_job.py  provisioning_resource.py
services/TenantProvisioning/app/repositories/: __init__.py  base.py  (+2 more)
services/TenantProvisioning/scripts/: bootstrap.sh
services/TenantProvisioning/tests/: conftest.py
services/Tenent/: .dockerignore  .env.example  Dockerfile  README.md  TODO.md  alembic.ini  pyproject.toml  test_tenent.db
services/Tenent/alembic/: env.py
services/Tenent/app/: main.py
services/Tenent/scripts/: fix.sh  lint.sh
services/Tenent/tests/: conftest.py
services/iam/: .env.example  ABAC_IAM_checklist.md  CLAUDE.md  RBAC_IAM_checklist.md  README.md  alembic.ini  pyproject.toml
services/iam/alembic/: env.py
services/iam/app/: main.py
services/iam/docs/: checklist.md
services/iam/tests/: conftest.py  test_auth.py  test_authorization_engine.py  test_google_auth.py  test_login.py  test_metrics.py  test_password_mgmt.py  test_rbac_tenancy.py  test_regestration.py  test_registration.py  test_security_compliance.py  test_structured_logging.py  test_user_management.py
(+387 files in other folders)
