[project]
name = "iam"
version = "0.1.0"
description = "IAM Microservice"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.0",
    "greenlet>=3.5.2",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = "^(alembic/|tests/fixtures/)"
