[project]
name = "iam"
version = "0.1.0"
description = "IAM Microservice"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.138.0",
    "gunicorn>=26.0.0",
    "uvicorn>=0.49.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = "^(alembic/|tests/fixtures/)"
