[project]
name = "tenant-management"
version = "0.1.0"
description = "Tenant Management Microservice"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.115.0",
    "greenlet>=3.5.3",
    "gunicorn>=23.0.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.27.0",
    "pylint>=3.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = "^(alembic/|tests/fixtures/)"

[tool.pylint.messages_control]
# Pylint is used exclusively for clone / copy-paste detection (R0801).
# All other checks are owned by ruff (style/errors) and mypy (types).
disable = ["all"]
enable  = ["duplicate-code"]

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-imports = "yes"
