[project]
name = "tenant-provisioning"
version = "0.1.0"
description = "Tenant Provisioning Microservice — async infrastructure setup for new tenants"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.115.0",
    "greenlet>=3.5.3",
    "gunicorn>=23.0.0",
    "uvicorn>=0.32.0",
    "aio-pika>=9.4.0",
    "celery[redis]>=5.3.6",
    "httpx>=0.27.0",
    "redis>=6.4.0",
    "prometheus-client>=0.25.0",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.10",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = "^(alembic/|tests/fixtures/)"

[tool.ruff]
line-length = 100
