[project]
name = "iam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "ruff>=0.15.17",
    "sqlalchemy>=2.0.50",
    "types-passlib>=1.7.7.20260211",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "types-setuptools>=82.0.0.20260518",
]
